@@ -20,56 +20,22 @@ type Config struct {
 	// Workers are the number of workers the controller will have
 	// handling objects.
 	Workers int
+	// MaxRetries is the maximum number of retries an object will have after an error.
+	MaxRetries int
 }
 
 func (c *Config) defaults() {
-	if c.ResyncInterval == 0 {
+	if c.ResyncInterval <= 0 {
 		c.ResyncInterval = 30 * time.Second
 	}
 
-	if c.Workers == 0 {
+	if c.Workers <= 0 {
 		c.Workers = 1
 	}
-}
 
-type objectStatus string
-
-const (
-	objectStatusPresent objectStatus = "present"
-	objectStatusMissing objectStatus = "missing"
-)
-
-// objectStatuses will store the object information in one place so if the
-// state of the object changes while is in the queue, it will processed
-// with the latest state.
-// Example, a object X has been modified enters in the queue, but before it has
-// been processed the object has been deleted, we get the object, if
-// we don't have an status store we would process the object as being modified
-// but the current state of the object is deleted, with this store we only
-// would enqueue objectIDs and in the last moment being dequeued the object ID from
-// the queue we would check the status on this object to get the latest state.
-type objectStatusStore struct {
-	objects map[string]objectStatus
-	mu      sync.Mutex
-}
-
-func (o *objectStatusStore) Store(objectID string, status objectStatus) {
-	o.mu.Lock()
-	defer o.mu.Unlock()
-	o.objects[objectID] = status
-}
-
-func (o *objectStatusStore) Get(objectID string) (st objectStatus, ok bool) {
-	o.mu.Lock()
-	defer o.mu.Unlock()
-	st, ok = o.objects[objectID]
-	return st, ok
-}
-
-func (o *objectStatusStore) Delete(objectID string) {
-	o.mu.Lock()
-	defer o.mu.Unlock()
-	delete(o.objects, objectID)
+	if c.MaxRetries <= 0 {
+		c.MaxRetries = 0
+	}
 }
 
 // Controller is the main controller that will process the objects.
@@ -85,7 +51,7 @@ type Controller struct {
 	objectLock  objectLock
 	queue       chan string
 	metricssvc  metrics.Recorder
-	objectCache objectStatusStore
+	objectCache *queuedObjectsCache
 }
 
 // New returns a new controller.
@@ -102,17 +68,15 @@ func New(cfg Config, lw ListerWatcher, handler Handler, storage Storage, metrics
 	}
 
 	return &Controller{
-		cfg:        cfg,
-		lw:         lw,
-		handler:    handler,
-		storage:    storage,
-		metricssvc: metricssvc.WithID(cfg.Name),
-		logger:     logger,
-		objectLock: newMemoryLock(),
-		queue:      make(chan string),
-		objectCache: objectStatusStore{
-			objects: map[string]objectStatus{},
-		},
+		cfg:         cfg,
+		lw:          lw,
+		handler:     handler,
+		storage:     storage,
+		metricssvc:  metricssvc.WithID(cfg.Name),
+		logger:      logger,
+		queue:       make(chan string),
+		objectLock:  newMemoryLock(),
+		objectCache: newQueuedObjectsCache(),
 	}
 }
 
@@ -171,7 +135,7 @@ func (c *Controller) reconcile() {
 	// Queue the objects to be handled.
 	for _, id := range objectIDs {
 		// Listed objects enqueue as present.
-		c.enqueueObject(id, objectStatusPresent)
+		c.enqueueObjectWithState(id, objectStatusPresent)
 	}
 }
 
@@ -183,9 +147,9 @@ func (c *Controller) handleWatcherEvents(stopC chan struct{}, eventStream <-chan
 		case ev := <-eventStream:
 			switch ev.Kind {
 			case EventAdded, EventModified:
-				c.enqueueObject(ev.ID, objectStatusPresent)
+				c.enqueueObjectWithState(ev.ID, objectStatusPresent)
 			case EventDeleted:
-				c.enqueueObject(ev.ID, objectStatusMissing)
+				c.enqueueObjectWithState(ev.ID, objectStatusMissing)
 			case EventError:
 				c.logger.Errorf("object event stream error for ID %s", ev.ID)
 			default:
@@ -201,12 +165,29 @@ func (c *Controller) runWorker(stopC chan struct{}) {
 		case <-stopC:
 			return
 		case objectID := <-c.queue:
+			// process the object.
 			err := c.processObject(objectID)
-			if err != nil {
-				// TODO retries.
-				c.logger.Errorf("error processing object %s: %s", objectID, err)
-			}
+			// Retry if required based on the result.
+			c.retryIfRequired(objectID, err)
 		}
+	}
+}
+
+func (c *Controller) retryIfRequired(id string, err error) {
+	retries, ok := c.objectCache.getRetries(id)
+	if err != nil && ok && retries < c.cfg.MaxRetries {
+		// Enqueue again for a new retry.
+		c.logger.Warningf("retrying (%d/%d) due to an error processing object %s: %s", retries+1, c.cfg.MaxRetries, id, err)
+		c.objectCache.incRetry(id)
+		c.enqueueObject(id)
+		return
+	}
+
+	// If no retries we need to remove the object from the cache to allow ListerWatcher queueing this
+	// object again.
+	defer c.objectCache.Delete(id)
+	if err != nil {
+		c.logger.Errorf("error processing object %s: %s", id, err)
 	}
 }
 
@@ -220,13 +201,11 @@ func (c *Controller) processObject(objectID string) (err error) {
 	defer c.objectLock.Release(objectID)
 
 	// What's the status of the object? We allow enqueuing when finished.
-	status, ok := c.objectCache.Get(objectID)
+	status, ok := c.objectCache.GetStatus(objectID)
 	if !ok {
 		c.logger.Errorf("%s object status not present in cache", objectID)
 		return nil
 	}
-
-	defer c.objectCache.Delete(objectID)
 
 	// Call the handler logic.
 	switch status {
@@ -262,34 +241,42 @@ func (c *Controller) processObject(objectID string) (err error) {
 	}
 }
 
-func (c *Controller) enqueueObject(objectID string, status objectStatus) {
+// enqueueObjectWithState will enqueue the object only if is not in the queue
+// if the object is already in the queue it will only update the state of the
+// object on the cache.
+func (c *Controller) enqueueObjectWithState(objectID string, status objectStatus) {
 	// Is already queued our event? If the event is already queued
 	// then don't enqueue again, we only need to update the status/
 	// on the cache.
-	_, ok := c.objectCache.Get(objectID)
+	_, ok := c.objectCache.GetStatus(objectID)
 
 	// We need to store the state on cache before enqueuing, if we
 	// don't do this, the workers could get a new object to handle
 	// and they don't have the latest object information on the cache.
-	c.objectCache.Store(objectID, status)
+	c.objectCache.SetStatus(objectID, status)
 
 	// Enqueue only if necessary. This way we don't enqueue the same
 	// object to process multiple times.
 	if !ok {
-		go func() {
-			c.metricssvc.IncControllerQueuedTotal()
-
-			// When finishing this func we measure the latency of being consumed a.k.a the
-			// time spent on the queue.
-			defer func(start time.Time) {
-				// If we are here means that the queued object has been consumed form the queue.
-				c.metricssvc.ObserveControllerOnQueueLatency(start)
-			}(time.Now())
-
-			// Queue the object.
-			c.queue <- objectID
-		}()
+		c.enqueueObject(objectID)
 	}
+}
+
+// enqueueObject will queue the object in the controller queue.
+func (c *Controller) enqueueObject(objectID string) {
+	go func() {
+		c.metricssvc.IncControllerQueuedTotal()
+
+		// When finishing this func we measure the latency of being consumed a.k.a the
+		// time spent on the queue.
+		defer func(start time.Time) {
+			// If we are here means that the queued object has been consumed form the queue.
+			c.metricssvc.ObserveControllerOnQueueLatency(start)
+		}(time.Now())
+
+		// Queue the object.
+		c.queue <- objectID
+	}()
 }
 
 // objectLock will be used to lock the objects, this gives us the ability
@@ -328,4 +315,79 @@ func (m *memoryLock) Release(id string) {
 	m.mu.Lock()
 	defer m.mu.Unlock()
 	delete(m.objectIDs, id)
+}
+
+// objectStatus will be used to know in what state is the object, if the
+// state of the object changes while is in the queue, it will processed
+// with the latest state and we will only need to process the object once.
+// Example, a object X has been modified enters in the queue, but before it has
+// been processed the object has been deleted, we get the object, if
+// we don't have an status store we would process the object as being modified
+// but the current state of the object is deleted, with this store we only
+// would enqueue objectIDs and in the last moment being dequeued the object ID from
+// the queue we would check the status on this object to get the latest state.
+
+type objectStatus string
+
+const (
+	objectStatusPresent objectStatus = "present"
+	objectStatusMissing objectStatus = "missing"
+)
+
+type objectData struct {
+	status  objectStatus
+	retries int
+}
+
+// queuedObjectsCache is a controller internal cache to store data
+// about queued objects, if the object is queued it will be in this
+// cache, if is not in the queue then it will not be in this cache.
+type queuedObjectsCache struct {
+	objects map[string]objectData
+	mu      sync.Mutex
+}
+
+func newQueuedObjectsCache() *queuedObjectsCache {
+	return &queuedObjectsCache{
+		objects: map[string]objectData{},
+	}
+}
+
+func (q *queuedObjectsCache) SetStatus(id string, st objectStatus) {
+	q.mu.Lock()
+	defer q.mu.Unlock()
+	q.objects[id] = objectData{
+		status: st,
+	}
+}
+
+func (q *queuedObjectsCache) GetStatus(id string) (st objectStatus, ok bool) {
+	q.mu.Lock()
+	defer q.mu.Unlock()
+	d, ok := q.objects[id]
+	return d.status, ok
+}
+
+func (q *queuedObjectsCache) Delete(id string) {
+	q.mu.Lock()
+	defer q.mu.Unlock()
+	delete(q.objects, id)
+}
+
+func (q *queuedObjectsCache) incRetry(id string) {
+	q.mu.Lock()
+	defer q.mu.Unlock()
+	d, ok := q.objects[id]
+	if !ok {
+		return
+	}
+	d.retries++
+	q.objects[id] = d
+}
+
+func (q *queuedObjectsCache) getRetries(id string) (ret int, ok bool) {
+	q.mu.Lock()
+	defer q.mu.Unlock()
+	d, ok := q.objects[id]
+	return d.retries, ok
 }
